--- a/src/site/xhtml/installation.xhtml.vm
+++ b/src/site/xhtml/installation.xhtml.vm
@@ -326,19 +326,19 @@
 			form machine:port where the port will normally be 3700.
 		</dd>
 		<dt>notification.list</dt>
-		<dd>is a space separated set of Entity names for which you with
-			to generate notifications. For each one there must be another line
-			saying under what conditions you wish to generate a notification for
-			the entity.</dd>
+		<dd>is optional. It is a space separated set of Entity names for
+			which you with to generate notifications. For each one there must be
+			another line saying under what conditions you wish to generate a
+			notification for the entity.</dd>
 		<dt>notification.&lt;entity name&gt;</dt>
 		<dd>a string of letters taken from the set "C", "U" and "D"
 			indicating for which operations (create, update and delete) you wish
 			to be notified for that kind of operation on the entity.</dd>
 		<dt>log.list</dt>
-		<dd>is a space separated set of call logging destinations -
-			currently valid destinations are "table" and "file". For each one
-			there must be another line saying what group of calls you wish to log
-			to that destination.</dd>
+		<dd>is optional. It is a space separated set of call logging
+			destinations - currently valid destinations are "table" and "file".
+			For each one there must be another line saying what group of calls
+			you wish to log to that destination.</dd>
 
 		<dt>log.&lt;destination&gt;</dt>
 		<dd>a string of letters taken from the set "S", "R" and "W"
