--- a/src/site/xhtml/installation.xhtml.vm
+++ b/src/site/xhtml/installation.xhtml.vm
@@ -38,7 +38,7 @@
 		<li><a
 			href="http://www.icatproject.org/mvn/site/tools/icat-setup/">icat-setup</a>
 			version 1.1.x or higher must be installed if you have a 4.2.x schema
-			you need to upgrade and you wish to preserve existing rules but is
+			you need to upgrade and you wish to preserve existing rules but it is
 			also generally a useful component to install.</li>
 		<li><a href="http://www.icatproject.org/mvn/site/tools/ice/">ice</a>
 			, the ICAT editor will make it easier to configure your ICAT.
@@ -317,6 +317,12 @@
 			JNDI names. For example for authn_db you would expect to see
 			java:global/authn_db.ear-1.0.0/authn_db.ejb-1.0.0/DB_Authenticator.
 			There must be one such entry for each plugin.</dd>
+		<dt>authn.&lt;mnemonic&gt;.friendly</dt>
+		<dd>is optional. It gives a name that a tool might use to label
+			the plugin.</dd>
+		<dt>authn.&lt;mnemonic&gt;.admin</dt>
+		<dd>is optional. Set to true if you wish to indicate that this
+			authenticator should only be advertised to administration tools.</dd>
 		<dt>authn.&lt;mnemonic&gt;.hostPort</dt>
 		<dd>
 			is optional. It should only be specified on satellite machines when
@@ -454,12 +460,12 @@
 		Also because some problems have been found with conditions containing
 		dots (such as "InvestigationUser [user.name='fred']") in rules these
 		must now be re-expressed without dots.</p>
-	<!-- 	<p>Finally you should run the icatadmin populate command to -->
-	<!-- 		populate lucene for all existing data as in the example below:</p> -->
-	<!-- 	<blockquote> -->
-	<!-- 		<code> icatadmin https://example.com:8181 db username root -->
-	<!-- 			password secret minusminus populate minusminustimeout 3600 </code> -->
-	<!-- 	</blockquote> -->
+	<p>Finally you should run the icatadmin populate command to
+		populate lucene for all existing data as in the example below:</p>
+	<blockquote>
+		<code> icatadmin https://example.com:8181 db username root
+			password secret -- populate</code>
+	</blockquote>
 	<h1>
 		<a id="performance"></a> Performance
 	</h1>
@@ -519,50 +525,32 @@
 			any superfluous definitions in the original properties file will not
 			be seen.</dd>
 
-		<!-- 		<dt>populate [&lt;entity name&gt;]</dt> -->
-		<!-- 		<dd>re-populates lucene for the specified entity name. This is -->
-		<!-- 			useful if the database has been modified directly rather than by -->
-		<!-- 			using the ICAT API. Note that because of caching, ICAT should be -->
-		<!-- 			reloaded after any direct database modifications are made. This call -->
-		<!-- 			is asynchronous and simply places the request in a set of entity -->
-		<!-- 			types to be populated. When the request is processed all lucene -->
-		<!-- 			entries of the specified entity type are first cleared then the -->
-		<!-- 			corresponding icat entries are scanned to re-populate lucene. To find -->
-		<!-- 			what it is doing please use the "populating" operation desribed -->
-		<!-- 			below. It may also be run without an entity name in which case it -->
-		<!-- 			will process all entities.</dd> -->
+		<dt>populate [&lt;entity name&gt;]</dt>
+		<dd>re-populates lucene for the specified entity name. This is
+			useful if the database has been modified directly rather than by
+			using the ICAT API. Note that because of caching, ICAT should be
+			reloaded after any direct database modifications are made. This call
+			is asynchronous and simply places the request in a set of entity
+			types to be populated. When the request is processed all lucene
+			entries of the specified entity type are first cleared then the
+			corresponding icat entries are scanned to re-populate lucene. To find
+			what it is doing please use the "populating" operation desribed
+			below. It may also be run without an entity name in which case it
+			will process all entities.</dd>
 
-		<!-- 		<dt>populating</dt> -->
-		<!-- 		<dd>returns a list of entity types to be processed for populating -->
-		<!-- 			lucene. Normally the first item returned will be being processed -->
-		<!-- 			currently.</dd> -->
+		<dt>populating</dt>
+		<dd>returns a list of entity types to be processed for populating
+			lucene. Normally the first item returned will be being processed
+			currently.</dd>
 
-		<!-- 		<dt>commit</dt> -->
-		<!-- 		<dd>instructs lucene to update indices. Normally this is not -->
-		<!-- 			needed as it is will be done periodically according to the value of -->
-		<!-- 			lucene.commitSeconds</dd> -->
+		<dt>commit</dt>
+		<dd>instructs lucene to update indices. Normally this is not
+			needed as it is will be done periodically according to the value of
+			lucene.commitSeconds</dd>
 
-		<!-- 		<dt>clear</dt> -->
-		<!-- 		<dd>clears all the lucene indices - but does not commit.</dd> -->
+		<dt>clear</dt>
+		<dd>clears all the lucene indices - but does not commit.</dd>
 
-		<!-- 		<dt>search &lt;query&gt; [&lt;maxCount&gt; [&lt;entityName&gt;]]</dt> -->
-		<!-- 		<dd> -->
-		<!-- 			searches lucene indices and returns a list of entity_name:entity_id -->
-		<!-- 			values. Arguments are -->
-		<!-- 			<dl> -->
-		<!-- 				<dt>query</dt> -->
-		<!-- 				<dd>a lucene query which should be enclosed in quotes if it -->
-		<!-- 					contains more than one word. Queries can contain AND and OR in -->
-		<!-- 					upper case as well as parentheses. The default operator is OR. -->
-		<!-- 					Wildcards of * and ? are also supported. Other features are -->
-		<!-- 					described in the user documentation for the searchText call.</dd> -->
-		<!-- 				<dt>maxCount</dt> -->
-		<!-- 				<dd>maximum number of values to return (defaults to 100)</dd> -->
-		<!-- 				<dt>entityName</dt> -->
-		<!-- 				<dd>if specified, this restrict results to entities with this -->
-		<!-- 					name</dd> -->
-		<!-- 			</dl> -->
-		<!-- 		</dd> -->
 	</dl>
 
 </body>
