--- a/src/site/xhtml/installation.xhtml.vm
+++ b/src/site/xhtml/installation.xhtml.vm
@@ -334,9 +334,9 @@
 			another line saying under what conditions you wish to generate a
 			notification for the entity.</dd>
 		<dt>notification.&lt;entity name&gt;</dt>
-		<dd>a string of letters taken from the set "C" and "U"
-			indicating for which operations (create and update) you wish
-			to be notified for that kind of operation on the entity.</dd>
+		<dd>a string of letters taken from the set "C" and "U" indicating
+			for which operations (create and update) you wish to be notified for
+			that kind of operation on the entity.</dd>
 		<dt>log.list</dt>
 		<dd>is optional. It is a space separated set of call logging
 			destinations - currently valid destinations are "table" and "file".
