--- a/src/site/xhtml/installation.xhtml.vm
+++ b/src/site/xhtml/installation.xhtml.vm
@@ -19,6 +19,7 @@
 		<li>The icat distribution: <a
 			href="${repoUrl}/org/icatproject/icat.server/${project.version}/icat.server-${project.version}-distro.zip">icat.server-${project.version}-distro.zip</a>
 		</li>
+		<li>Java 8</li>
 		<li>A suitable deployed container. The installation scripts only
 			support Glassfish. Testing has been carried out with Glassfish 4.0. <a
 			href="http://icatproject.org/installation/glassfish/">Glassfish
@@ -334,9 +335,9 @@
 			another line saying under what conditions you wish to generate a
 			notification for the entity.</dd>
 		<dt>notification.&lt;entity name&gt;</dt>
-		<dd>a string of letters taken from the set "C" and "U"
-			indicating for which operations (create and update) you wish
-			to be notified for that kind of operation on the entity.</dd>
+		<dd>a string of letters taken from the set "C" and "U" indicating
+			for which operations (create and update) you wish to be notified for
+			that kind of operation on the entity.</dd>
 		<dt>log.list</dt>
 		<dd>is optional. It is a space separated set of call logging
 			destinations - currently valid destinations are "table" and "file".
