--- a/src/site/xhtml/installation.xhtml.vm
+++ b/src/site/xhtml/installation.xhtml.vm
@@ -335,22 +335,16 @@
 			which you with to generate notifications. For each one there must be
 			another line saying under what conditions you wish to generate a
 			notification for the entity.</dd>
+
 		<dt>notification.&lt;entity name&gt;</dt>
 		<dd>a string of letters taken from the set "C" and "U" indicating
 			for which operations (create and update) you wish to be notified for
 			that kind of operation on the entity.</dd>
-		<dt>log.list</dt>
-		<dd>is optional. It is a space separated set of call logging
-			destinations - currently valid destinations are "table" and "file".
-			For each one there must be another line saying what group of calls
-			you wish to log to that destination.</dd>
 
-		<dt>log.&lt;destination&gt;</dt>
-		<dd>a string of letters taken from the set "S", "R" and "W"
-			indicating for which group of calls you wish to generate a log entry.
-			"S" denotes session calls (login, refresh and logout); "R" is used
-			for the various read calls and "W" is used for all write calls
-			(create, update and delete).</dd>
+		<dt>log.list</dt>
+		<dd>is optional. If present it specifies a set of call types to
+			log via JMS calls. The types are specified by a space separated list
+			of values taken from READ, WRITE, SESSION, INFO.</dd>
 
 		<dt>logback.xml</dt>
 		<dd>This is optional. If present it must specify the path to a
